k8s/service-a-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: prod
spec:
  selector:
    app: service-a
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
