k8s/service-b-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-b
  namespace: prod
spec:
  selector:
    app: service-b
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
